--- a/aimslab.html
+++ b/aimslab.html
@@ -6,41 +6,100 @@
   <title>AIMSLab</title>
 
   <link rel="stylesheet" href="css/style.css" type="text/css">
+  <style>
+    .main-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      width: 100%;
+      height: 100%;
+      gap: 40px;
+    }
 
+    .nav-links {
+      width: 25%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      height: 100%;
+    }
+
+    .nav-links.left-links {
+      padding-left: 40px;
+    }
+
+    .nav-links ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+    }
+
+    .nav-links li {
+      padding: 5px 0;
+    }
+
+    .nav-links a {
+      text-decoration: none;
+      color: brown;
+      font-size: 20px;
+    }
+
+    .logo-container {
+      text-align: center;
+      width: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0 20px;
+    }
+
+    .logo-image {
+      max-width: 650px;
+      width: 100%;
+      height: auto;
+    }
+
+    #header {
+      height: auto;
+      min-height: 200px;
+      display: flex;
+      align-items: center;
+    }
+
+    #contents {
+      padding-left: 40px;
+    }
+  </style>
 </head><body>
 <div id="header">
+  <header class="main-header">
+    <div class="nav-links left-links">
+      <ul>
+        <li><a href="#anchor-people">People</a></li>
+        <li><a href="#anchor-projects">Projects</a></li>
+        <li><a href="#anchor-publications">Publications</a></li>
+        <li><a href="#anchor-projects-collaborators">Collaborators</a></li>
+        <li><a href="#anchor-news">News</a></li>
+      </ul>
+    </div>
 
-<div class="row">
-<div class="column" align="left">
-<ul style="margin-top:80px; margin-left:-120px; font-size:25px">
-  <li style="margin-top:30px;"><a style="color:brown;" href="#anchor-people">People</a></li>
-  <li style="margin-top:10px;"><a style="color:brown;" href="#anchor-projects">Projects</a></li>
-  <li style="margin-top:10px;"><a style="color:brown;" href="#anchor-publications">Publications</a></li>
-  <li style="margin-top:10px;"><a style="color:brown;" href="#anchor-projects-collaborators">Collaborators</a></li>
-  <li style="margin-top:10px;"><a style="color:brown;" href="#anchor-news">News</a></li>
-</ul>
-</div>
+    <div class="logo-container">
+      <a href="aimslab.html">
+        <img src="images/aimslab_logo1.png" alt="AIMSLab Logo" class="logo-image">
+      </a>
+    </div>
 
-<div class="column" align="center">
-<a href="aimslab.html"><img style=" border: 0px solid ; width: 650px; margin-top:-0px; margin-left:-200px;" alt="" src="images/aimslab_logo1.png" align="center" hspace="-20" vspace="0"></a>
-</div>
-
-
-<div class="column" align="right">
-<ul style="list-style-type:none; margin-top:-380px; margin-right:-760px; font-size:20px" align="right">
-  <li style="margin-top:30px;"  align="right"><a style="color:brown;" href="http://louisville.edu/" target="_blank">University of Louisville</a></li>
-  <li style="margin-top:10px;"><a style="color:brown;" href="https://engineering.louisville.edu/"  target="_blank"
->Speed School of Engineering</a></li>
-  <li style="margin-top:10px;"><a style="color:brown;" href="https://engineering.louisville.edu/academics/departments/computer/" target="_blank">UofL CSE Department</a></li>
-  <li style="margin-top:10px;"><a style="color:brown;" href="https://engineering.louisville.edu/research/centersinstitutes/larri/"  target="_blank">LARRI</a></li>
-  <li style="margin-top:10px;"><a style="color:brown;" href="http://cwc.ucsd.edu/" target="_blank"> UCSD CWC</a></li>
-</ul>
-</div>
-
-
-
-
-</div>
+    <div class="nav-links">
+      <ul>
+        <li><a href="http://louisville.edu/" target="_blank">University of Louisville</a></li>
+        <li><a href="https://engineering.louisville.edu/" target="_blank">Speed School of Engineering</a></li>
+        <li><a href="https://engineering.louisville.edu/academics/departments/computer/" target="_blank">UofL CSE Department</a></li>
+        <li><a href="https://engineering.louisville.edu/research/centersinstitutes/larri/" target="_blank">LARRI</a></li>
+        <li><a href="http://cwc.ucsd.edu/" target="_blank">UCSD CWC</a></li>
+      </ul>
+    </div>
+  </header>
 </div>
 
 <div id="contents"><!--<h1 align="center">News</h1>-->
@@ -63,23 +122,24 @@
 </h2>
 <style type="text/css">
 #wrap {
-   width:1000px;
+   width:100%;
+   max-width:1200px;
    margin:0 auto;
    height:80px;
 }
 #left_col {
    float:left;
-   width:550px;
+   width:60%;
 }  
 #right_col {
    float:right;
-   width:450px;
+   width:40%;
 }  
 </style>
 <div id="wrap">
     <div id="left_col">
     <h3>Current Students: </h3>
-      <ul style="width: 823px; font-family: Times New Roman,Times,serif;">
+      <ul style="width: 100%; font-family: Times New Roman,Times,serif;">
         <li><a href="https://sites.google.com/view/helaluddinsimon" target="blank" style="color:brown;">Mohammad Helal Uddin</a> (PhD, CSE, UofL - started Fall 2021)<br></li>
         <br>
         <li>Darian Zeis (Undergrad, CSE, UofL) <br></li>
@@ -91,10 +151,10 @@
       </ul>
    </div>
 
-    <div id="right_col" style="margin-right:-20px; margin-top:-60px;">
+    <div id="right_col" style="margin-right:0px; margin-top:-60px;">
         <br><br><br><br>
       <h3>Current External Student Collaborators:</h3>
-      <ul style="width: 823px; font-family: Times New Roman,Times,serif;">
+      <ul style="width: 100%; font-family: Times New Roman,Times,serif;">
         <li>Yu-Jen Ku (PhD, ECE, UCSD)<br></li>
         <br>
         <li>Basar Kutukcu (PhD, ECE, UCSD)<br></li>
@@ -123,23 +183,24 @@
 
 <style type="text/css">
 #wrap {
-   width:1000px;
+   width:100%;
+   max-width:1200px;
    margin:0 auto;
 }
 #left_col {
    float:left;
-   width:550px;
+   width:60%;
 }
 #right_col {
    float:right;
-   width:450px;
+   width:40%;
 }
 </style>
 
 <div id="wrap">
     <div id="left_col">
 
-      <ul style="width: 823px; font-family: Times New Roman,Times,serif;">
+      <ul style="width: 100%; font-family: Times New Roman,Times,serif;">
   	<li>System Optimizations for Edge/Cloud Computing<br></li>
   	<br>
   	<li>Building Simulators for Autonomous Systems with Digital Twin<br></li>
@@ -157,7 +218,7 @@
 
    </div>
 
-    <div id="right_col" style="margin-right:-20px; margin-top:-60px;">
+    <div id="right_col" style="margin-right:0px; margin-top:-60px;">
         <img src="images/wordcloud4.jpg" width="400">
 	<br>
     </div>
@@ -177,7 +238,7 @@
 </h2>
 <div id="wrap">
     <div id="left_col">
-        <ul style="width: 823px; font-family: Times New Roman,Times,serif;">
+        <ul style="width: 100%; font-family: Times New Roman,Times,serif;">
             <li>
                 <b>Collaborative Perception over Vehicular Edge Computing</b><br>
                 Developing efficient task partitioning algorithms and real-time multi-sensor fusion for improved collaborative vision in smart transportation systems. Features a prototype testbed with smart vehicles and edge computing nodes.
@@ -239,6 +300,7 @@
 <br><br><br><br>
 <br><br><br><br>
 <br><br><br><br>
+<br><br><br><br>
 
 
 
@@ -247,16 +309,17 @@
 
 <style type="text/css">
 #wrap {
-   width:1000px;
+   width:100%;
+   max-width:1200px;
    margin:0 auto;
 }
 #left_col {
    float:left;
-   width:550px;
+   width:60%;
 }
 #right_col {
    float:right;
-   width:450px;
+   width:40%;
 }
 </style>
 
@@ -284,7 +347,7 @@
 	<li> <a style="color:brown;" href="https://research.google/people/105776/" target="_blank"><b>Aakanksha Chowdhery</b></a>, Machine Learning Engineer, Google Brain </li>
      </ol>
     </div>
-    <div id="right_col" style="margin-right:-20px; margin-top:-0px;">
+    <div id="right_col" style="margin-right:0px; margin-top:-0px;">
 	<img src="images/collaborators1.png" width="500">
 	
     </div>
@@ -329,7 +392,7 @@
 
 <div id="wrap">
     <div id="left_col">
-        <ul style="width: 823px; font-family: Times New Roman,Times,serif;">
+        <ul style="width: 100%; font-family: Times New Roman,Times,serif;">
             <!-- Most recent publications first -->
             <li>
                 <b>Adaptive Computation Partitioning in Edge Computing Systems</b><br>
@@ -360,6 +423,7 @@
     </div>
 </div>
 
+<br><br><br><br>
 <br><br><br><br>
 <br><br><br><br>
 <br><br><br><br>
