added comments for readability

--- a/aimslab.html
+++ b/aimslab.html
@@ -163,19 +163,32 @@
 </div>
 </div>
 
-<div id="contents"><!--<h1 align="center">News</h1>-->
+<!-- ===============================================================
+MAIN CONTENT AREA BEGINS HERE
+================================================================ -->
+<div id="contents">
+
+<!-- News section (currently empty but structure in place) -->
 <ul class="news">
 </ul>
 
+<!-- ===============================================================
+ABOUT SECTION - Introduction to AIMSLab
+================================================================ -->
 <div style="font-weight: bold; height: 66px;" id="subsubheader">
 <h2 style="color:darkblue;"><b>About</b><br>
 <br>
 <p>The Autonomous Intelligent Mobile Systems Laboratory (AIMSLab) was established in 2021 as one of the major labs at the Louisville Automation and Robotics Research Institute (LARRI) at the University of Louisville (UofL).  AIMSLab housed in the LARRI aims at conducting advanced studies and development of autonomous and Intelligent systems including unmanned aerial vehicles, ground rovers, connected and autonomous vehicles, industrial robotic arms, metaverse applications, and Wireless and Mobile innovations. This is done through novel integration of sensing and intelligent decision-making in the space of collaborative robotics using AI and adaptive sensing, as well as the exploration of multi-level edge and cloud computing capabilities. AIMSLab provides a very open, inclusive and collaborative environment and embraces researchers from different background, culture and demography. It provides a cutting-edge facility equipped with a lots of mobile robots, sensors, systems and tools and connects with several other labs located at LARRI for close collaboration with other engineering departments and also the school of medicine for healthcare related research.</p>
 </h2></div>
 <br/><br/>
+<!-- Spacing between sections -->
 <br/><br/><br/>
 <br/><br/><br/>
 <br/><br/><br/>
+
+<!-- ===============================================================
+PEOPLE SECTION - Team members, faculty, students, alumni
+================================================================ -->
 <h2 id="anchor-people" class="section-heading"><b>People</b></h2>
 
 <style>
@@ -226,7 +239,9 @@
 }
 </style>
 
+<!-- Team member table - organized by role/position -->
 <table class="team-table">
+  <!-- Lab Director/Principal Investigator -->
   <tr><th colspan="2">Faculty/PI (Lab Director)</th></tr>
   <tr>
     <td><img class="team-photo" src="https://via.placeholder.com/110" alt="Faculty Photo"></td>
@@ -371,6 +386,9 @@
   </td></tr>
 </table>
 
+<!-- ===============================================================
+RESEARCH AREAS SECTION - Current research focus areas
+================================================================ -->
 <h2 id="anchor-research-areas" class="section-heading research-areas-section"><b>Active Research Areas</b><br/>
 </h2>
 <style type="text/css">
@@ -415,6 +433,9 @@
 <br>
 <p>    Some past and present projects are listed here: <a href="research.html" target="_blank">Projects</a></p>
 <br/><br/>
+<!-- ===============================================================
+PROJECTS SECTION - Current research projects with details
+================================================================ -->
 <h2 id="anchor-projects" class="section-heading">Projects</h2>
 
 <!-- 
@@ -440,21 +461,6 @@
             <p class="project-links"><a href="research.html#your-anchor">[View Project Details]</a></p>
         </td>
     </tr>
-
-    Available project images in /images/ folder:
-    - STIP_Testbed_diagram.png (testbed/infrastructure)
-    - architecture_netselect_color.png (architecture diagrams)
-    - uav_edge_setup.png (UAV/drone projects)
-    - iot_figure1.png (IoT/sensor projects)
-    - UAV_comm.png (communication/networking)
-    - netselect_project.png (network/SDN projects)
-    - cog_interf_control.png (cognitive/AI projects)
-    - dual_band_project.png (wireless projects)
-    - clone-n-cast_project.png (multimedia projects)
-    - mptcp_project1.png (protocol projects)
-    - multihoming_project.png (networking projects)
-    - cognitive_lte_project.png (LTE/cellular projects)
-    - Or add your own image to the /images/ folder
 -->
 
 <table class="project-table">
@@ -540,6 +546,9 @@
 </table>
 
 
+<!-- ===============================================================
+COLLABORATORS SECTION - External research partners
+================================================================ -->
 <h2 id="anchor-projects-collaborators" class="section-heading">External Collaborators</h2>
 <style type="text/css">
 #wrap {
@@ -591,6 +600,9 @@
 <br/><br/>
 <br/><br/><br/><br/>
 <br/><br/><br/><br/>
+<!-- ===============================================================
+PUBLICATIONS SECTION - Recent research publications
+================================================================ -->
 <h2 id="anchor-publications" class="section-heading">Publications</h2>
 <!-- 
     HOW TO ADD NEW PUBLICATIONS
@@ -652,8 +664,68 @@
 <br/><br/><br/><br/>
 <br/><br/><br/><br/>
 
-<!-- Recent News -->
-<h2 id="anchor-news" class="section-heading">Recent News</h2>
+<!-- ===============================================================
+LAB FACILITIES SECTION - Equipment and infrastructure
+================================================================ -->
+<h2 id="anchor-collab" style="color:darkblue;"><b>Lab Facilities and Equipment</b><br>
+</h2>
+<p>AIMSLab inhabits a large high-bay space at LARRI, which is optimized for indoor aerial robotic flight and ground vehicle control. High-precision tracking and high frequency control loops are facilitated by an optical tracking system using 22 Optitrack cameras that provides over 12,000 cubic feet of test room with millimeter-precision reporting. The entire netted space is remote controlled with sliding panels which opens to provide space for other research, e.g., mixed reality metaverse and experiments with ground robots. The positioning results, within 1mm, can be published to a ROS topic at a rate of one update per several milliseconds. The entire system latency has been measured to less than 7.5 milliseconds. This permits testing of flight control algorithms in a controlled, indoor setting without requiring the setup and coordination of an outdoor GPS-assisted flight. Furthermore, it accelerates development of low-cost LiDAR-based imaging as indoor-rated sensors can be used for evaluation. An automatic, retractable netting system that encloses the cage at all faces permits safe operation for researchers, while allowing unimpeded access when aircraft are not in flight.</p>
+
+<!-- Facility images showing drone and ground vehicle capabilities -->
+<div>
+      <div id="left_col" style="margin-left:0px; margin-top:-0px;">
+ 	<img src="images/aimslab_drones.jpg" width="550">
+	<div class="caption" style="color:blue">AIMSLab indoor fully netted drone flying facility with Opti-track motion capture system and multiple advanced drones of different sizes</div>
+    </div>
+    <div id="right_col" style="margin-right:-40px; margin-top:-0px;">
+ 	<img src="images/aimslab_ground_vehicles.jpg" width="420">
+	<div class="caption" style="color:blue">AIMSLab ground robots and autonomous electric vehicle with available infrastructure for indoor experiments</div>
+    </div>
+</div>
+
+<br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br>
+
+<!-- Additional facility images showing robotic arms and computing infrastructure -->
+<div>
+      <div id="left_col" style="margin-left:0px; margin-top:-0px;">
+ 	<img src="photos/aimslab_robots_sensors.jpg" width="500">
+	<div class="caption" style="color:blue">Franka-Emika robotic arm with Haption handheld haptic device and other AR/VR sensors, RGBD cameras and Ouster Lidars</div>
+    </div>
+    <div id="right_col" style="margin-right:0px; margin-top:-20px;">
+ 	<img src="photos/aimslab_comp_com.jpg" width="450">
+	<div class="caption" style="color:blue">AIMSLab Computing facility with embedded computing units and lambda-vector server and Software-Defined Radios for 6G research </div>
+    </div>
+</div>
+
+<br><br><br><br>
+<br><br><br><br>
+<br><br><br><br>
+
+<!-- ===============================================================
+GRANT SPONSORS SECTION - Funding organizations and partners
+================================================================ -->
+<h2 id="anchor-sponsors" style="color: darkblue; margin-top: 27% !important; margin-bottom: 0.7em; font-weight: bold;"><b>Grant Sponsors</b><br>
+</h2>
+
+<!-- Sponsors logo image showing funding organizations -->
+<img src="images/sponsors.jpg" width=1000 align="center">
+
+
+
+<br><br><br><br>
+
+<style type="text/css"> @import url("css/style.css"); </style>
+<br><br>
+
+
+
+<!-- ===============================================================
+NEWS SECTION - Recent updates and announcements
+================================================================ -->
+<h2 id="anchor-news" style="color:darkblue;"><b>Recent News</b><br>
+</h2>
 <ul>
 </ul>
 <ul>
@@ -670,6 +742,10 @@
 <ul class="news">
 </ul>
 </br></div>
+
+<!-- ===============================================================
+FOOTER SECTION - University affiliation logos
+================================================================ -->
 <div id="footer">
 <div class="clearfix">
 <table width="100%">
@@ -681,7 +757,9 @@
 </table>
 </div>
 </div>
-<!-- Code injected by live-server -->
+<!-- ===============================================================
+LIVE-SERVER AUTO-REFRESH SCRIPT - Development tool
+================================================================ -->
 <script>
 	// <![CDATA[  <-- For SVG support
 	if ('WebSocket' in window) {
