made personal pages for lab members

--- a/aimslab.html
+++ b/aimslab.html
@@ -228,6 +228,8 @@ PEOPLE SECTION - Team members, faculty, students, alumni
   color: #222;
   font-size: 1.1em;
 }
+
+
 .team-role {
   font-style: italic;
   color: #444;
@@ -246,11 +248,11 @@ PEOPLE SECTION - Team members, faculty, students, alumni
   <tr>
     <td><img class="team-photo" src="https://via.placeholder.com/110" alt="Faculty Photo"></td>
     <td class="team-info">
-      <div class="team-name">Dr. Sabur Baidya</div>
+                        <div class="team-name">Dr. Sabur Baidya</div>
       <p class="team-role">Assistant Professor, Computer Science & Engineering, University of Louisville</p>
       <p class="team-contact">LinkedIn: <a href="https://www.linkedin.com/in/saburhb" target="_blank">LinkedIn</a></p>
       <p class="team-contact">Email: <a href="mailto:sabur.baidya@louisville.edu">sabur.baidya@louisville.edu</a></p>
-      <p class="team-contact">Website: <a href="https://sabur-baidya.com" target="_blank">Website</a></p>
+              <p class="team-contact">Website: <a href="https://sabur-baidya.com/">Website</a></p>
       <p class="team-topic">Research Area: Edge Computing, Robotics, Wireless Networks</p>
     </td>
   </tr>
@@ -259,77 +261,77 @@ PEOPLE SECTION - Team members, faculty, students, alumni
   <tr>
     <td><img class="team-photo" src="https://via.placeholder.com/110" alt="Helal"></td>
     <td class="team-info">
-      <div class="team-name">Mohammad Helal Uddin</div>
+                        <div class="team-name">Mohammad Helal Uddin</div>
       <p class="team-role">Ph.D. Student, CSE, UofL</p>
       <p class="team-contact">LinkedIn: <a href="#" target="_blank">LinkedIn</a></p>
       <p class="team-contact">Email: <a href="mailto:helal@example.com">helal@example.com</a></p>
-      <p class="team-contact">Website: <a href="#" target="_blank">Website</a></p>
+      <p class="team-contact">Website: <a href="mohammad_helal_uddin.html">Website</a></p>
       <p class="team-topic">Research Area: Neural Network Compression for Resource-constrained Cyber-Physical Systems</p>
     </td>
   </tr>
   <tr>
     <td><img class="team-photo" src="https://via.placeholder.com/110" alt="Narges"></td>
     <td class="team-info">
-      <div class="team-name">Narges Golmohammadi</div>
+                        <div class="team-name">Narges Golmohammadi</div>
       <p class="team-role">Ph.D. Student, CSE, UofL</p>
       <p class="team-contact">LinkedIn: <a href="#" target="_blank">LinkedIn</a></p>
       <p class="team-contact">Email: <a href="mailto:narges@example.com">narges@example.com</a></p>
-      <p class="team-contact">Website: <a href="#" target="_blank">Website</a></p>
+      <p class="team-contact">Website: <a href="narges_golmohammadi.html">Website</a></p>
       <p class="team-topic">Research Area: Intelligent and Optimized Next Generation Wireless Communication in Robotics</p>
     </td>
   </tr>
   <tr>
     <td><img class="team-photo" src="https://via.placeholder.com/110" alt="Ashutosh"></td>
     <td class="team-info">
-      <div class="team-name">Ashutosh Prakash</div>
+                        <div class="team-name">Ashutosh Prakash</div>
       <p class="team-role">Ph.D. Student, ECE, UofL (Co-advisor)</p>
       <p class="team-contact">LinkedIn: <a href="#" target="_blank">LinkedIn</a></p>
       <p class="team-contact">Email: <a href="mailto:ashutosh@example.com">ashutosh@example.com</a></p>
-      <p class="team-contact">Website: <a href="#" target="_blank">Website</a></p>
+      <p class="team-contact">Website: <a href="ashutosh_prakash.html">Website</a></p>
       <p class="team-topic">Research Area: Haptic Enabled Digital Twin based Teleroperation in Robotic Arm</p>
     </td>
   </tr>
   <tr>
     <td><img class="team-photo" src="https://via.placeholder.com/110" alt="William"></td>
     <td class="team-info">
-      <div class="team-name">William Arnold</div>
+                        <div class="team-name">William Arnold</div>
       <p class="team-role">M.S. Student, CSE, UofL</p>
       <p class="team-contact">LinkedIn: <a href="#" target="_blank">LinkedIn</a></p>
       <p class="team-contact">Email: <a href="mailto:william@example.com">william@example.com</a></p>
-      <p class="team-contact">Website: <a href="#" target="_blank">Website</a></p>
+      <p class="team-contact">Website: <a href="william_arnold.html">Website</a></p>
       <p class="team-topic">Research Area: Side Channel and Systems Security in Industrial Robotics</p>
     </td>
   </tr>
   <tr>
     <td><img class="team-photo" src="https://via.placeholder.com/110" alt="Raju"></td>
     <td class="team-info">
-      <div class="team-name">Raju Garuda</div>
+                        <div class="team-name">Raju Garuda</div>
       <p class="team-role">M.S. Student, CSE, UofL</p>
       <p class="team-contact">LinkedIn: <a href="#" target="_blank">LinkedIn</a></p>
       <p class="team-contact">Email: <a href="mailto:raju@example.com">raju@example.com</a></p>
-      <p class="team-contact">Website: <a href="#" target="_blank">Website</a></p>
+      <p class="team-contact">Website: <a href="raju_garuda.html">Website</a></p>
       <p class="team-topic">Research Area: Integrated Co-simulation of Robotics and Software-Defined Radios</p>
     </td>
   </tr>
   <tr>
     <td><img class="team-photo" src="https://via.placeholder.com/110" alt="Luke"></td>
     <td class="team-info">
-      <div class="team-name">Luke Rappa</div>
+                        <div class="team-name">Luke Rappa</div>
       <p class="team-role">M.S. Student, CSE, UofL</p>
       <p class="team-contact">LinkedIn: <a href="#" target="_blank">LinkedIn</a></p>
       <p class="team-contact">Email: <a href="mailto:luke@example.com">luke@example.com</a></p>
-      <p class="team-contact">Website: <a href="#" target="_blank">Website</a></p>
+      <p class="team-contact">Website: <a href="luke_rappa.html">Website</a></p>
       <p class="team-topic">Research Area: Enhanced Anomaly Detection with Deep Learning for Smart Agriculture</p>
     </td>
   </tr>
   <tr>
     <td><img class="team-photo" src="https://via.placeholder.com/110" alt="Basar"></td>
     <td class="team-info">
-      <div class="team-name">Basar Kutukcu</div>
+                        <div class="team-name">Basar Kutukcu</div>
       <p class="team-role">Ph.D. Student, CSE, University of California San Diego (External Advisor)</p>
       <p class="team-contact">LinkedIn: <a href="#" target="_blank">LinkedIn</a></p>
       <p class="team-contact">Email: <a href="mailto:basar@example.com">basar@example.com</a></p>
-      <p class="team-contact">Website: <a href="#" target="_blank">Website</a></p>
+      <p class="team-contact">Website: <a href="basar_kutukcu.html">Website</a></p>
       <p class="team-topic">Research Area: Hardware Software Co-design and Optimization for Deep Learning on Embedded Systems</p>
     </td>
   </tr>
@@ -338,22 +340,22 @@ PEOPLE SECTION - Team members, faculty, students, alumni
   <tr>
     <td><img class="team-photo" src="https://via.placeholder.com/110" alt="Liam"></td>
     <td class="team-info">
-      <div class="team-name">Liam Seymour</div>
+                        <div class="team-name">Liam Seymour</div>
       <p class="team-role">B.S. Student, Double Major (ECE and CSE), Western Kentucky University (REU Intern)</p>
       <p class="team-contact">LinkedIn: <a href="#" target="_blank">LinkedIn</a></p>
       <p class="team-contact">Email: <a href="mailto:liam@example.com">liam@example.com</a></p>
-      <p class="team-contact">Website: <a href="#" target="_blank">Website</a></p>
+      <p class="team-contact">Website: <a href="liam_seymour.html">Website</a></p>
       <p class="team-topic">Research Area: Large Language Models on Resource-constrained Cyber-Physical Systems</p>
     </td>
   </tr>
   <tr>
     <td><img class="team-photo" src="https://via.placeholder.com/110" alt="Alwin"></td>
     <td class="team-info">
-      <div class="team-name">Alwin Rajkumar</div>
+                        <div class="team-name">Alwin Rajkumar</div>
       <p class="team-role">B.S. Student, CSE, UofL</p>
       <p class="team-contact">LinkedIn: <a href="#" target="_blank">LinkedIn</a></p>
       <p class="team-contact">Email: <a href="mailto:alwin@example.com">alwin@example.com</a></p>
-      <p class="team-contact">Website: <a href="#" target="_blank">Website</a></p>
+      <p class="team-contact">Website: <a href="alwin_rajkumar.html">Website</a></p>
       <p class="team-topic">Research Area: Deep Multi-task Fusion for constrained robotic systems, e.g., UAVs</p>
     </td>
   </tr>
@@ -362,11 +364,11 @@ PEOPLE SECTION - Team members, faculty, students, alumni
   <tr>
     <td><img class="team-photo" src="https://via.placeholder.com/110" alt="Saveer"></td>
     <td class="team-info">
-      <div class="team-name">Saveer Jain</div>
+                        <div class="team-name">Saveer Jain</div>
       <p class="team-role">K-12 Student, Dupont Manual High School</p>
       <p class="team-contact">LinkedIn: <a href="#" target="_blank">LinkedIn</a></p>
       <p class="team-contact">Email: <a href="mailto:saveer@example.com">saveer@example.com</a></p>
-      <p class="team-contact">Website: <a href="#" target="_blank">Website</a></p>
+      <p class="team-contact">Website: <a href="saveer_jain.html">Website</a></p>
       <p class="team-topic">Research Area: Robotic Security, Tactical Sensing</p>
     </td>
   </tr>
